@@ -5,6 +5,8 @@ import sbt._
 import sbtassembly.AssemblyKeys._
 import sbtassembly._
 import JettyPlugin.autoImport._
+import fi.gekkio.sbtplugins.jrebel.JRebelPlugin._
+import com.earldouglas.xwp.WebappPlugin.autoImport.webappPrepare
 
 object MyBuild extends Build {
   val Organization = "gitbucket"
@@ -77,5 +79,10 @@ object MyBuild extends Build {
     testOptions in Test += Tests.Setup( () => new java.io.File("target/gitbucket_home_for_test").mkdir() ),
     fork in Test := true,
     packageOptions += Package.MainClass("JettyLauncher")
+  ).settings(jrebelSettings: _*).settings(
+    jrebel.webLinks += (target in webappPrepare).value,
+    jrebel.enabled := System.getenv().get("JREBEL") != null,
+    javaOptions in Jetty ++= Option(System.getenv().get("JREBEL")).toSeq.flatMap(path =>
+      Seq("-noverify", "-XX:+UseConcMarkSweepGC", "-XX:+CMSClassUnloadingEnabled", s"-javaagent:${path}"))
   ).enablePlugins(SbtTwirl, JettyPlugin)
 }
